# serializer version: 1
# name: test_load_gpx_file_to_df_empty_file
  list([
    tuple(
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.NAME: 'NAME'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.SOURCE_FILE: 'SOURCE_FILE'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.TIMESTAMP_MAYBE_TIMEZONE_AWARE: 'TIMESTAMP_MAYBE_TIMEZONE_AWARE'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>,
      datetime64[ns, UTC],
    ),
    tuple(
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>,
      dtype('float64'),
    ),
    tuple(
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>,
      dtype('float64'),
    ),
  ])
# ---
# name: test_load_gpx_file_to_df_empty_file.1
  list([
  ])
# ---
# name: test_load_gpx_file_to_df_trackpoints_without_time
  list([
    tuple(
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.NAME: 'NAME'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.SOURCE_FILE: 'SOURCE_FILE'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.TIMESTAMP_MAYBE_TIMEZONE_AWARE: 'TIMESTAMP_MAYBE_TIMEZONE_AWARE'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>,
      datetime64[ns, UTC],
    ),
    tuple(
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>,
      dtype('float64'),
    ),
    tuple(
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>,
      dtype('float64'),
    ),
  ])
# ---
# name: test_load_gpx_file_to_df_trackpoints_without_time.1
  list([
  ])
# ---
# name: test_load_gpx_file_to_df_valid_file
  list([
    tuple(
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.SOURCE_FILE: 'SOURCE_FILE'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.TIMESTAMP_MAYBE_TIMEZONE_AWARE: 'TIMESTAMP_MAYBE_TIMEZONE_AWARE'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>,
      datetime64[ns, UTC],
    ),
    tuple(
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>,
      dtype('float64'),
    ),
    tuple(
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>,
      dtype('float64'),
    ),
    tuple(
      <SchemaColumns.NAME: 'NAME'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.CAPTION: 'CAPTION'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>,
      dtype('O'),
    ),
    tuple(
      'QUANTIZED_H3_L0',
      dtype('O'),
    ),
    tuple(
      'QUANTIZED_H3_L1',
      dtype('O'),
    ),
    tuple(
      'QUANTIZED_H3_L2',
      dtype('O'),
    ),
    tuple(
      'QUANTIZED_H3_L3',
      dtype('O'),
    ),
    tuple(
      'QUANTIZED_H3_L4',
      dtype('O'),
    ),
    tuple(
      'QUANTIZED_H3_L5',
      dtype('O'),
    ),
    tuple(
      'QUANTIZED_H3_L6',
      dtype('O'),
    ),
    tuple(
      'QUANTIZED_H3_L7',
      dtype('O'),
    ),
    tuple(
      'QUANTIZED_H3_L8',
      dtype('O'),
    ),
    tuple(
      'QUANTIZED_H3_L9',
      dtype('O'),
    ),
    tuple(
      'QUANTIZED_H3_L10',
      dtype('O'),
    ),
    tuple(
      'QUANTIZED_H3_L11',
      dtype('O'),
    ),
    tuple(
      'QUANTIZED_H3_L12',
      dtype('O'),
    ),
    tuple(
      'QUANTIZED_H3_L13',
      dtype('O'),
    ),
    tuple(
      'QUANTIZED_H3_L14',
      dtype('O'),
    ),
    tuple(
      'QUANTIZED_H3_L15',
      dtype('O'),
    ),
  ])
# ---
# name: test_load_gpx_file_to_df_valid_file.1
  list([
    dict({
      <SchemaColumns.CAPTION: 'CAPTION'>: nan,
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_TRACKPOINT: 'GPX_TRACKPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7749,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4194,
      <SchemaColumns.NAME: 'NAME'>: nan,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283082800ffff',
      'QUANTIZED_H3_L11': '8b283082800bfff',
      'QUANTIZED_H3_L12': '8c283082800b3ff',
      'QUANTIZED_H3_L13': '8d283082800b3bf',
      'QUANTIZED_H3_L14': '8e283082800b397',
      'QUANTIZED_H3_L15': '8f283082800b390',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '872830828ffffff',
      'QUANTIZED_H3_L8': '8828308281fffff',
      'QUANTIZED_H3_L9': '89283082803ffff',
      <SchemaColumns.SOURCE_FILE: 'SOURCE_FILE'>: 'test.gpx',
      <SchemaColumns.TIMESTAMP_MAYBE_TIMEZONE_AWARE: 'TIMESTAMP_MAYBE_TIMEZONE_AWARE'>: '2023-01-01T12:00:00+00:00',
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2023-01-01 12:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'f50ca1b8-4ef2-5277-f204-ead8ff90010b',
    }),
    dict({
      <SchemaColumns.CAPTION: 'CAPTION'>: nan,
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_TRACKPOINT: 'GPX_TRACKPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.775,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4195,
      <SchemaColumns.NAME: 'NAME'>: nan,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283082800ffff',
      'QUANTIZED_H3_L11': '8b283082800bfff',
      'QUANTIZED_H3_L12': '8c283082800b3ff',
      'QUANTIZED_H3_L13': '8d283082800b2ff',
      'QUANTIZED_H3_L14': '8e283082800b2c7',
      'QUANTIZED_H3_L15': '8f283082800b2c3',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '872830828ffffff',
      'QUANTIZED_H3_L8': '8828308281fffff',
      'QUANTIZED_H3_L9': '89283082803ffff',
      <SchemaColumns.SOURCE_FILE: 'SOURCE_FILE'>: 'test.gpx',
      <SchemaColumns.TIMESTAMP_MAYBE_TIMEZONE_AWARE: 'TIMESTAMP_MAYBE_TIMEZONE_AWARE'>: '2023-01-01T12:05:00+00:00',
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2023-01-01 12:05:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'd8cc04e9-eaf6-faa8-fc15-8e67a8f6918d',
    }),
    dict({
      <SchemaColumns.CAPTION: 'CAPTION'>: 'A test waypoint',
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_WAYPOINT: 'GPX_WAYPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7751,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4196,
      <SchemaColumns.NAME: 'NAME'>: 'Test Waypoint',
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a2830828057fff',
      'QUANTIZED_H3_L11': '8b2830828056fff',
      'QUANTIZED_H3_L12': '8c28308280565ff',
      'QUANTIZED_H3_L13': '8d28308280564bf',
      'QUANTIZED_H3_L14': '8e283082805648f',
      'QUANTIZED_H3_L15': '8f2830828056488',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '872830828ffffff',
      'QUANTIZED_H3_L8': '8828308281fffff',
      'QUANTIZED_H3_L9': '89283082807ffff',
      <SchemaColumns.SOURCE_FILE: 'SOURCE_FILE'>: 'test.gpx',
      <SchemaColumns.TIMESTAMP_MAYBE_TIMEZONE_AWARE: 'TIMESTAMP_MAYBE_TIMEZONE_AWARE'>: '2023-01-01T12:10:00+00:00',
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2023-01-01 12:10:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: '0b1274cd-b196-2831-b4f6-166e73220eb8',
    }),
  ])
# ---
